--- a/src/style/_article.sass
+++ b/src/style/_article.sass
@@ -1,12 +1,11 @@
 .article
-  padding: 8rem 0 0
+  padding: 7.5rem 0 0
   &__title
     display: flex
     align-items: center
-    margin: 0 0 8rem
+    margin: 0 0 8.4rem
     color: #0062FF
     text-shadow: 0 .4rem .4rem rgba(0, 0, 0, 0.25)
-    font-family: Consolas, sans-serif
     font-size: 4.6rem
     font-weight: 700
     line-height: calc(25 / 23)
@@ -16,6 +15,7 @@
       padding: 0 3rem
     &::before, &::after
       content: ''
+      // transform: translateY(-.3rem)
       width: 100%
       height: .1rem
       background-color: #DBDBDB
@@ -35,7 +35,7 @@
     &-wrapp
       overflow: auto
       margin: 0
-      padding-bottom: 3.2rem
+      padding-bottom: 2.8rem
       &::-webkit-scrollbar
         width: 1rem
         height: 1rem
@@ -50,13 +50,17 @@
     font-family: Arial, sans-serif
     font-style: italic
     line-height: calc( 18 / 14 )
-    margin: 0 0 2.6rem
+    margin: 0 0 5.2rem
 
   +lg
+    padding: 7.6rem 0 0
     &__title
       font-size: 4.8rem
-      margin: 0 0 6.4rem
+      margin: 0 0 6.8rem
       line-height: 1
+      &::before, &::after
+        transform: translateY(-.3rem)
+
       &-text
         padding: 0 2.8rem
     &__date
@@ -76,7 +80,7 @@
     &__caption
       position: relative
       font-size: 1.4rem
-      padding: 2rem 0 5.7rem
+      padding: 2rem 0 5rem
       margin: 0
       &-text
         display: block
@@ -92,6 +96,6 @@
         width: 0
         height: 0
         border: 0 solid transparent
-        border-right-width: .9rem
-        border-left-width: .9rem
-        border-bottom: 1.2rem solid #fff
+        border-right-width: .6rem
+        border-left-width: .6rem
+        border-bottom: 1rem solid #fff
