--- a/src/style/_date.sass
+++ b/src/style/_date.sass
@@ -1,25 +1,22 @@
 .date
-  padding: 2.4rem 2.9rem 2.2rem
+  padding: 2rem 2.9rem 2.6rem
   background: rgba(255, 255, 255, 0.90)
   max-width: 12rem
   margin: 0
+  text-align: center
+  font-family: Merriweather, serif
+  line-height: 1.3
   &__day
     display: inline-block
     vertical-align: middle
     color: #1A1A1A
-    font-family: Merriweather, serif
     font-size: 2.4rem
-    font-style: normal
-    font-weight: 400
-    line-height: calc( 25 / 16 )
+    line-height: 1.4
   &__arrow
     position: relative
-    left: .5rem
+    left: .8rem
     width: .5rem
     height: .5rem
-    margin-right: -1rem
-  &__mounth
+    margin-right: -.8rem
+  &__month
     color: #1A1A1A
-    font-family: Merriweather
-    font-style: normal
-    line-height: calc( 25 / 16 )
