styles changed according to new layout

--- a/src/index.sass
+++ b/src/index.sass
@@ -6,9 +6,11 @@
 @import 'style/fonts'
 @import 'style/style'
 
+@import 'style/ui'
 @import 'style/form'
 @import 'style/date'
 
+@import 'style/header'
 @import 'style/article'
 @import 'style/quote'
 @import 'style/promo'
