--- a/src/style/_conclusion.sass
+++ b/src/style/_conclusion.sass
@@ -1,22 +1,24 @@
 .conclusion
   padding: 4.6rem 0 5.6rem
   &__title
-    color: #000
-    font-size: 4.2rem
-    font-weight: 700
-    line-height: calc( 36 / 21 )
-    margin: 0 0 5rem
+    font-size: 4.4rem
+    line-height: $lh-30-22
+    margin: 0 0 1.8rem
+    font-weight: 500
+    letter-spacing: -0.044rem
   &__text
     margin: 0
-    color: #202326
-    font-family: ArialMT, sans-serif
-    line-height: calc( 18 / 14 )
+    font-size: 2.8rem
+    line-height: 1.5
+    letter-spacing: 0.028rem
   +lg
     padding: 4.5rem 0 7.6rem
     &__title
-      margin-bottom: 2.6rem
+      margin-bottom: 1.6rem
       font-size: 2.8rem
-      font-weight: 400
-      line-height: calc( 36 / 28 )
+      line-height: $lh-36-28
+      letter-spacing: -0.056rem
     &__text
-      line-height: calc( 24 / 16 )
+      font-size: 1.6rem
+      line-height: 1.6
+      letter-spacing: 0.016rem
