--- a/src/style/_fonts.sass
+++ b/src/style/_fonts.sass
@@ -1,8 +1,3 @@
-+font-face(ArialMT, woff2 woff)
-+font-face(ArialMT, woff2 woff, 700)
-+font-face(Consolas, woff2 woff)
-+font-face(Consolas, woff2 woff, 700)
-+font-face(Helvetica, woff2 woff)
-+font-face(Merriweather, woff2 woff)
-+font-face(OpenSans, woff2 woff, 400, italic)
-+font-face(SegoeUI, woff2 woff)
++font-face(Onest, woff2 woff)
++font-face(Onest, woff2 woff, 500)
++font-face(Onest, woff2 woff, 600)
