--- a/src/style/_form.sass
+++ b/src/style/_form.sass
@@ -1,125 +1,125 @@
 .form
-  --placeholder-top: 3.2rem
+  // --placeholder-top: 3.2rem
   &__fieldset
     display: block
     border: none
     margin: 0
     padding: 0
   &__legend
-    color: #202326
-    font-size: 3.6rem
-    font-weight: 700
-    line-height: 1
-  &__submit
-    display: block
-    width: 100%
-    padding: 2.8rem 19.2rem 2.8rem 19.4rem
-    color: #fff
-    font-family: Arial, sans-serif
-    line-height: normal
-    border-radius: .4rem
-    background: #0062FF
+    font-size: 2.2rem
+    font-weight: 600
+    line-height: $lh-18-11
+    letter-spacing: 0.044rem
     text-transform: uppercase
-    border: none
+  &__submit
+    min-height: 10rem
+    width: 100%
   &__input
-    --padding-x: 4rem
+    --padding-x: 2.8rem
     display: block
     position: relative
-    background-color: $bg-main
     border-radius: 1.2rem
     height: max-content
     z-index: 1
+    font-size: 2.8rem
+    line-height: $lh-15-14
     &-item
       position: relative
-      font-family: Arial, sans-serif
-      line-height: 1
       display: block
       width: 100%
-      color: #222
-      padding: 5.2rem var(--padding-x) 1.4rem
-      background-color: #fff0
+      line-height: 1
+      color: $text
+      padding: 3.2rem var(--padding-x) 3.4rem
+      background-color: #fff
       border-radius: 1.2rem
-      border: .2rem solid #E6E6E6
-      transition: .4s
-      outline: .4rem solid #fff0
+      border: .2rem solid $border
+      outline: .2rem solid $tran
+      outline-offset: -.1rem
       z-index: 5
+      transition: .4s
       &:-webkit-autofill
         background-color: #fff0 !important
       &:focus
-        outline: .4rem solid #7F7F7F
+        outline: .2rem solid $main-blue
       &::placeholder
         color: #fff0
 
     &-item:focus + &-placeholder, &._filled > &-placeholder
-      top: var(--placeholder-top)
+      top: 2rem
+      font-size: 1.8rem
+      font-weight: 500
+      line-height: $lh-14-9
 
     &-placeholder
       position: absolute
-      font-family: Arial, sans-serif
       top: 50%
       left: var(--padding-x)
       transform: translateY(-50%)
-      color: #777
+      color: $text-ui
       transition: .2s
       z-index: 5
     &-arrow
-      width: 3rem
-      height: 3rem
+      width: 2.2rem
+      height: 1.2rem
       position: absolute
       display: block
       top: 50%
       right: var(--padding-x)
       transform: translateY(-50%)
-      transition-duration: .4s
-      z-index: -1
+      transition: .2s
+      z-index: 5
 
-    &._opened > &-arrow
+    ._opened ~ &-arrow
       transform: translateY(-50%) rotate(180deg)
-      transition-delay: .0s
 
     &_type_multiline > &
       &-item
         resize: none
-        padding: 4.8rem var(--padding-x) 2rem
+        min-height: 40rem
       &-placeholder
-        top: 4rem
+        top: 3.2rem
 
     // select
     &_type_select
       z-index: 5
 
-    &_type_select > &-placeholder
-      transition: .0s
-
-    &_type_select > &-item::placeholder
-      position: relative
-      color: #777
+    // &_type_select > &
+    //   &-placeholder
+    //     transition: .0s
 
     &_type_select > &
-      &-item
-        padding: 3.2rem 6.4rem 3.2rem var(--padding-x)
+      &-item::placeholder
+        // position: relative
+        color: $text-ui
+
+    // &_type_select > &
+    //   &-item
+        // padding: 3.2rem 6.4rem 3.2rem var(--padding-x)
 
     &_type_select._filled > &-placeholder
       top: 50%
       opacity: 0
 
-    &._opened > &-options-wrapp
+    ._opened ~ &-options-wrapp > &-options
       height: auto
 
     &-options
       display: block
       list-style: none
+      height: 0
+      overflow: hidden
       padding: 0
-      margin: 2rem 0 0
+      // margin: 2rem 0 0
       background: $bg-main
-      box-shadow: 0 .4rem 3rem 0 rgba(154, 154, 154, 0.50)
+      box-shadow: 0 1.6rem 12rem 0 rgba(154, 154, 154, 0.50)
+      border-radius: 1.2rem
       &-wrapp
         position: absolute
         top: 0
         left: 0
         right: 0
-        height: 0
-        overflow: hidden
+        // height: 0
+        // overflow: hidden
         z-index: 1
         padding-top: 10rem
       &-item
@@ -127,68 +127,78 @@
         background-color: $bg-main
         border-left: 1.4rem solid $bg-main
         color: #222
-        font-family: ArialMT, sans-serif
         line-height: calc( 45 / 14 )
         transition: .4s
         &:not(:last-child)
           margin-bottom: -.1rem
         &:hover
-          background-color: #EDEDED
-          border-color: #0062FF
+          background-color: $bg-alt
+          border-color: $main-blue
         &._selected
-          border-color: #0062FF
+          border-color: $main-blue
           pointer-events: none
   +lg
-    --placeholder-top: 1.6rem
+    // --placeholder-top: 1.6rem
     &__legend
       font-size: 1.8rem
     &__submit
       width: auto
-      font-size: 1.4rem
-      padding: 1.4rem 7.062rem 1.4rem 7.1rem
-      border-radius: .2rem
+      min-width: 13.3rem
+      min-height: 5rem
+      // font-size: 1.4rem
+      // padding: 1.4rem 7.062rem 1.4rem 7.1rem
+      // border-radius: .2rem
     &__input
-      --padding-x: 1.8rem
+      --padding-x: 1.4rem
       border-radius: 0.6rem
 
       &-item
         font-size: 1.4rem
-        line-height: 1
-        padding: 2.6rem var(--padding-x) .7rem
+        line-height: $lh-15-14
+        // padding: 2.6rem  .7rem
+        padding: 1.6rem var(--padding-x) 1.7rem
         border-radius: .6rem
-        border: .1rem solid #E6E6E6
-        outline: .2rem solid #fff0
-        outline-offset: -.25rem
+        border: .1rem solid $border
+        outline: .1rem solid $tran
+        outline-offset: -.05rem
         &:focus
-          outline: .2rem solid #7F7F7F
+          outline: .1rem solid $main-blue
+
       &-placeholder
         line-height: 1
         font-size: 1.4rem
 
       &-arrow
-        width: 1.5rem
-        height: 1.5rem
+        width: 1.1rem
+        height: .6rem
+
+      &-item:focus + &-placeholder, &._filled > &-placeholder
+        font-size: .9rem
+        top: 1.3rem
 
       &_type_multiline > &
         &-item
-          padding: 2.4rem var(--padding-x) 1rem
+          // padding: 1.6rem var(--padding-x) 1.7rem
+          min-height: 14.6rem
         &-placeholder
           top: 2.3rem
 
       &_type_select > &
         &-item
-          padding: 1.6rem 3.2rem 1.6rem var(--padding-x)
+          // padding: 1.6rem var(--padding-x) 1.7rem
           overflow: hidden
           text-overflow: ellipsis
 
       &-options
-        margin: 1rem 0 0
-        box-shadow: 0 .2rem 1.5rem 0 rgba(154, 154, 154, 0.50)
+        // margin: 1rem 0 0
+        box-shadow: 0 .8rem 6rem 0 rgba(154, 154, 154, 0.50)
+        border-radius: .6rem
         &-wrapp
-          padding-top: 5rem
+          padding-top: 5.5rem
         &-item
           font-size: 1.4rem
-          padding-left: 1.8rem
+          padding-left: 1rem
+
           border-left: .7rem solid $bg-main
           &:not(:last-child)
             margin-bottom: -.1rem
