--- a/src/style/_nav.sass
+++ b/src/style/_nav.sass
@@ -28,15 +28,26 @@
       width: 100%
       padding-bottom: 100%
       overflow: hidden
-      margin-bottom: 3.8rem
+      margin-bottom: 2.4rem
+      border-radius: 3.6rem
   &__caption
     display: block
     max-width: 80%
-
+  &__date
+    color: $text-ui
+    font-size: 2.4rem
+    line-height: $lh-16-12
+    letter-spacing: 0.048rem
+    margin-bottom: 1.4rem
   +lg
     max-width: none
     &__img
       &-wrapp
-        margin-bottom: 1.8rem
+        border-radius: 1.8rem
+        margin-bottom: 1.2rem
     &__link
       font-size: 1.8rem
+    &__date
+      font-size: 1.2rem
+      letter-spacing: 0.024rem
+      margin-bottom: 7px
