--- a/src/style/_var.sass
+++ b/src/style/_var.sass
@@ -1,6 +1,25 @@
 $fonts-path: "../fonts/"
 
-$bg-main: #fff
-$bg-alt: #EDEDED
+$bg-main: #F8F8FA
+$bg-alt: #F1F1F3
 
-$text: #1A1A1A
+$main-blue: #2D1AA7
+$border: #EDEDF1
+$tran: #fff0
+
+$text: #202326
+$text-ui: #777
+$text-btn: #fff
+
+$lh-14-9: calc( 14 / 9 )
+$lh-15-14: calc( 15 / 14)
+$lh-16-12: calc( 16 / 12)
+$lh-18-14: calc( 18 / 14)
+$lh-18-11: calc( 18 / 11)
+$lh-18-15: calc( 18 / 15)
+$lh-20-14: calc( 20 / 14)
+$lh-30-22: calc( 30 / 22)
+$lh-32-28: calc( 32 / 28)
+$lh-36-28: calc( 36 / 28)
+$lh-38-34: calc( 38 / 34)
+$lh-48-52: calc( 48 / 52)
