--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -2,11 +2,11 @@
   position: relative
   padding: 7rem 0 20rem
   &__title
-    color: #272522
-    font-size: 4.6rem
-    font-weight: 700
-    line-height: calc( 28 / 23 )
-    margin: 0 0 5rem
+    font-size: 2.8rem
+    font-weight: 500
+    line-height: $lh-32-28
+    letter-spacing: -0.028rem
+    margin: 0 0 3.6rem
   & &__pagination
     display: flex
     padding: 1rem 0
@@ -18,18 +18,20 @@
       width: 2rem
       margin: 0 2.1rem
       opacity: 1
-      background-color: #ccc
+      background-color: #ECECF3
       transition: .4s
     &>.swiper-pagination-bullet-active
       transform: scale(1.5)
-      background-color: #0062FF
+      background-color: $main-blue
 
   +lg
     padding: 6rem 0 7.5rem
     &__title
-      font-size: 2.8rem
-      font-weight: 400
+      font-size: 4rem
+      font-weight: 500
       line-height: 1
-      margin: 0 0 4.2rem
+      margin: 0 0 3.2rem
+      line-height: .9
+      letter-spacing: -0.08rem
     &__pagination
       display: none
