--- a/src/style/_rating.sass
+++ b/src/style/_rating.sass
@@ -1,8 +1,15 @@
 .rating
   &__legend
-    margin-bottom: 3rem
+    margin-bottom: 1.6rem
+  &__count
+    min-width: 5.2rem
+    min-height: 7.2rem
+    font-size: 5.6rem
+    font-weight: 500
+    line-height: $lh-36-28
   &__stars
     display: flex
+    align-items: center
   &__input
     -webkit-appearance: none
     appearance: none
@@ -39,6 +46,11 @@
   +lg
     &__legend
       margin-bottom: 1rem
+    &__count
+      min-width: 2.6rem
+      min-height: 3.6rem
+      font-size: 2.8rem
+      line-height: $lh-36-28
     &__star
       width: 2.5rem
       height: 2.5rem
