--- a/src/style/_style.sass
+++ b/src/style/_style.sass
@@ -11,15 +11,14 @@ body
   box-sizing: border-box
   min-width: 320px
   margin: 0
-  font-family: Consolas, sans-serif
+  font-family: Onest, sans-serif
   background-color: $bg-main
   color: $text
-  font-size: 2.8rem
+  font-size: 3.6rem
   font-weight: 400
-  line-height: 1.5
-  font-style: normal
+  line-height: 1.4
   +lg
-    font-size: 1.6rem
+    font-size: 2.2rem
 
 .container
   max-width: 64rem
