one element fixed

--- a/src/style/_article.sass
+++ b/src/style/_article.sass
@@ -51,8 +51,10 @@
     &__date
       display: block
       position: absolute
-      top: 1.3rem
-      left: 2.0rem
+      top: 1.6rem
+      right: 1.6rem
+      z-index: 2
+
     &__figure
       flex-direction: column-reverse
     &__swiper
