--- a/src/style/_var.sass
+++ b/src/style/_var.sass
@@ -18,6 +18,8 @@ $lh-18-14: calc( 18 / 14)
 $lh-18-11: calc( 18 / 11)
 $lh-18-15: calc( 18 / 15)
 $lh-20-14: calc( 20 / 14)
+$lh-25-16: calc( 25 / 24)
+$lh-25-24: calc( 25 / 24)
 $lh-30-22: calc( 30 / 22)
 $lh-32-28: calc( 32 / 28)
 $lh-36-28: calc( 36 / 28)
