--- a/src/style/_date.sass
+++ b/src/style/_date.sass
@@ -1,21 +1,24 @@
 .date
-  padding: 2rem 2.9rem 2.6rem
+  padding: 2rem 2.8rem 1.8rem 2.7rem
   background: rgba(255, 255, 255, 0.90)
+  border-radius: 1.8rem
   max-width: 12rem
   margin: 0
+  font-weight: 500
   text-align: center
-  line-height: 1.3
   &__day
     display: inline-block
     vertical-align: middle
-    color: #1A1A1A
     font-size: 2.4rem
-    line-height: 1.4
+    line-height: $lh-25-24
   &__arrow
     position: relative
-    left: .8rem
+    display: inline-block
+    vertical-align: middle
+    left: .5rem
     width: .5rem
     height: .5rem
     margin-right: -.8rem
   &__month
-    color: #1A1A1A
+    font-size: 1.6rem
+    line-height: $lh-25-16
