--- a/src/style/_nav.sass
+++ b/src/style/_nav.sass
@@ -9,10 +9,9 @@
     flex-direction: column
   &__link
     text-decoration: none
-    color: #272522
-    font-size: 3.6rem
-    font-weight: 700
-    line-height: calc( 24 / 18)
+    font-size: 3.2rem
+    font-weight: 500
+    line-height: $lh-22-16
   &__img
     position: absolute
     top: 0
@@ -34,6 +33,7 @@
     display: block
     max-width: 80%
   &__date
+    display: block
     color: $text-ui
     font-size: 2.4rem
     line-height: $lh-16-12
@@ -44,10 +44,10 @@
     &__img
       &-wrapp
         border-radius: 1.8rem
-        margin-bottom: 1.2rem
+        margin-bottom: 1.3rem
     &__link
-      font-size: 1.8rem
+      font-size: 1.6rem
     &__date
       font-size: 1.2rem
       letter-spacing: 0.024rem
-      margin-bottom: 7px
+      margin-bottom: .7rem
