--- a/src/style/_promo.sass
+++ b/src/style/_promo.sass
@@ -1,5 +1,5 @@
 .promo
-  padding: 12rem 0 14.6rem
+  padding: 3.8rem 0 8.6rem
   background-color: $bg-alt
   &__container
     display: flex
@@ -41,13 +41,13 @@
   &__img
     overflow: hidden
     font-size: 0
-    margin-bottom: 13px
+    margin-bottom: 18px
   &__source
     height: 100%
     object-fit: contain
     object-position: center
 
   +lg
-    padding: 3.4rem 0 3.6rem
-    &__link
-      margin-bottom: 16px
+    padding: 6rem 0 7.2rem
+    &__img
+      margin-bottom: 13px
