--- a/src/style/_ui.sass
+++ b/src/style/_ui.sass
@@ -39,13 +39,13 @@
     transition: .4s
     &_pos
       &_top
-        top: 0
+        top: -.3rem
         ._show &
-          transform: translateY(.75rem) rotate(135deg)
+          transform: translateY(.6rem) rotate(135deg)
       &_middle
-        top: 50%
+        top: 30%
         ._show &
-          transform: translateY(-.75rem) rotate(-135deg)
+          transform: translateY(-.6rem) rotate(-135deg)
 
   +lg
     display: none
