--- a/src/style/_article.sass
+++ b/src/style/_article.sass
@@ -1,5 +1,5 @@
 .article
-  padding: 5.6rem 0 0
+  padding: 5.4rem 0 0
   overflow: hidden
   &__title
     margin: 0 0 2.2rem
@@ -20,10 +20,12 @@
   &__swiper
     width: 100%
     overflow: visible
+    margin: 0 -0.8rem
+    padding: 0 0.8rem
     &-wrapper
       width: max-content
     & > .swiper-scrollbar
-      height: .5rem
+      height: .6rem
       background-color: #E6E6E6
       border-radius: 1rem
       & >.swiper-scrollbar-drag
@@ -34,12 +36,12 @@
   &__img
     display: block
     &-wrapp
-      padding-bottom: 2.8rem
+      padding-bottom: 4.5rem
   &__caption
-    color: #202326
     line-height: $lh-20-14
-    margin: 0 0 5.2rem
-
+    font-size: 2.8rem
+    margin: 0 0 4.2rem
+    max-width: 80%
   +lg
     padding: 11.9rem 0 0
     &__title
@@ -58,6 +60,8 @@
     &__figure
       flex-direction: column-reverse
     &__swiper
+      margin: 0
+      padding: 0
       &-wrapper
         width: 100%
     &__img
