--- a/src/style/_date.sass
+++ b/src/style/_date.sass
@@ -1,8 +1,8 @@
 .date
-  padding: 2rem 2.8rem 1.8rem 2.7rem
+  padding: 2.4rem 2.8rem 2.5rem 2.7rem
   background: rgba(255, 255, 255, 0.90)
   border-radius: 1.8rem
-  max-width: 12rem
+  max-width: 11rem
   margin: 0
   font-weight: 500
   text-align: center
@@ -20,5 +20,7 @@
     height: .5rem
     margin-right: -.8rem
   &__month
+    display: inline-block
     font-size: 1.6rem
     line-height: $lh-25-16
+    vertical-align: middle
