--- a/src/style/_footer.sass
+++ b/src/style/_footer.sass
@@ -1,25 +1,28 @@
 .footer
   position: relative
-  padding: 7rem 0 20rem
+  padding: 6rem 0 15rem
   &__title
-    font-size: 2.8rem
+    font-size: 5.6rem
     font-weight: 500
     line-height: $lh-32-28
-    letter-spacing: -0.028rem
+    letter-spacing: -0.056rem
     margin: 0 0 3.6rem
   & &__pagination
     display: flex
     padding: 1rem 0
-    bottom: 12.1rem
+    bottom: 7.4rem
     justify-content: center
     padding-right: 2.2rem
+    margin: 0 -0.8rem 0
     &>.swiper-pagination-bullet
       height: 2rem
       width: 2rem
-      margin: 0 2.1rem
+      margin: 0 2rem
       opacity: 1
       background-color: #ECECF3
       transition: .4s
+      &:first-child
+        margin-left: 3.8rem
     &>.swiper-pagination-bullet-active
       transform: scale(1.5)
       background-color: $main-blue
@@ -33,5 +36,5 @@
       margin: 0 0 3.2rem
       line-height: .9
       letter-spacing: -0.08rem
-    &__pagination
+    & &__pagination
       display: none
