--- a/src/style/_form.sass
+++ b/src/style/_form.sass
@@ -29,9 +29,9 @@
       width: 100%
       line-height: 1
       color: $text
-      padding: 3.2rem var(--padding-x) 3.4rem
+      padding: 3rem var(--padding-x)
       background-color: #fff
-      border-radius: 1.2rem
+      border-radius: 2rem
       border: .2rem solid $border
       outline: .2rem solid $tran
       outline-offset: -.1rem
@@ -77,7 +77,7 @@
         resize: none
         min-height: 40rem
       &-placeholder
-        top: 3.2rem
+        top: 4.8rem
 
     // select
     &_type_select
@@ -121,7 +121,7 @@
         // height: 0
         // overflow: hidden
         z-index: 1
-        padding-top: 10rem
+        padding-top: 11.5rem
       &-item
         padding-left: 3.6rem
         background-color: $bg-main
@@ -140,7 +140,8 @@
   +lg
     // --placeholder-top: 1.6rem
     &__legend
-      font-size: 1.8rem
+      font-size: 1.1rem
+      letter-spacing: 0.022rem
     &__submit
       width: auto
       min-width: 13.3rem
@@ -157,7 +158,7 @@
         line-height: $lh-15-14
         // padding: 2.6rem  .7rem
         padding: 1.6rem var(--padding-x) 1.7rem
-        border-radius: .6rem
+        border-radius: 1rem
         border: .1rem solid $border
         outline: .1rem solid $tran
         outline-offset: -.05rem
@@ -174,7 +175,7 @@
 
       &-item:focus + &-placeholder, &._filled > &-placeholder
         font-size: .9rem
-        top: 1.3rem
+        top: 1rem
 
       &_type_multiline > &
         &-item
