--- a/src/style/_quote.sass
+++ b/src/style/_quote.sass
@@ -1,7 +1,6 @@
 .quote
-  padding: 10rem 0
+  padding: 9rem 0 10rem
   &__title
-    color: $text
     font-size: 4.4rem
     font-weight: 500
     line-height: $lh-30-22
@@ -13,10 +12,9 @@
   &__marker
     width: 7.6rem
     height: 7.6rem
-    margin-bottom: 3.4rem
+    margin-bottom: 1.8rem
     color: $main-blue
   &__text
-    color: #1A1A1A
     margin: 0 0 2.8rem
   &__author
     color: $text-ui
@@ -28,7 +26,7 @@
       content: '— '
 
   +lg
-    padding: 0 0 4.5rem
+    padding: 0 0 8rem
     &__title
       border-top: 0.2rem solid #DCDCDC
       padding-top: 2.5rem
@@ -45,9 +43,8 @@
       width: 3.8rem
       height: 3.8rem
     &__text
-      font-size: 1.8rem
-      line-height: calc( 24 / 18 )
-      margin: 0 0 2rem
+      font-size: 2.2rem
+      margin: 0 0 2.6rem
     &__author
       font-size: 1.6rem
       line-height: 1.5
