--- a/src/style/_rating.sass
+++ b/src/style/_rating.sass
@@ -1,6 +1,6 @@
 .rating
   &__legend
-    margin-bottom: 1.6rem
+    margin-bottom: 1.25rem
   &__count
     min-width: 5.2rem
     min-height: 7.2rem
@@ -22,7 +22,7 @@
   &__label
     font-size: 0
     &:not(:last-child)
-      margin-right: 2rem
+      margin-right: 1.25rem
   &__input-1:checked ~ &__label:first-of-type>&__star,
   &__input-2:checked ~ &__label:nth-of-type(-n + 2)>&__star,
   &__input-3:checked ~ &__label:nth-of-type(-n + 3)>&__star,
@@ -45,7 +45,7 @@
     stroke: #979797
   +lg
     &__legend
-      margin-bottom: 1rem
+      margin-bottom: .8rem
     &__count
       min-width: 2.6rem
       min-height: 3.6rem
@@ -56,4 +56,4 @@
       height: 2.5rem
     &__label
       &:not(:last-child)
-        margin-right: 1rem
+        margin-right: .6rem
