modal window added

--- a/src/style/_nav.sass
+++ b/src/style/_nav.sass
@@ -8,10 +8,13 @@
     display: flex
     flex-direction: column
   &__link
+    color: $text
     text-decoration: none
     font-size: 3.2rem
     font-weight: 500
     line-height: $lh-22-16
+    +hover
+      color: $main-blue
   &__img
     position: absolute
     top: 0
