--- a/src/style/_rating.sass
+++ b/src/style/_rating.sass
@@ -21,6 +21,7 @@
     height: 5rem
   &__label
     font-size: 0
+    cursor: pointer
     &:not(:last-child)
       margin-right: 1.25rem
   &__input-1:checked ~ &__label:first-of-type>&__star,
