--- a/src/style/_ui.sass
+++ b/src/style/_ui.sass
@@ -7,6 +7,7 @@
   border-radius: 10rem
   background-color: $main-blue
   border: none
+  cursor: pointer
   +lg
     padding: 1rem 2rem 1.2rem
     font-size: 1.4rem
@@ -17,6 +18,7 @@
   font-size: 3rem
   font-weight: 500
   line-height: $lh-18-15
+  cursor: pointer
   +hover
     color: $main-blue
   +lg
@@ -30,6 +32,7 @@
   padding: 0
   border: none
   background-color: $tran
+  cursor: pointer
   &__line
     position: absolute
     left: 0
