--- a/src/style/_form.sass
+++ b/src/style/_form.sass
@@ -1,5 +1,4 @@
 .form
-  // --placeholder-top: 3.2rem
   &__fieldset
     display: block
     border: none
@@ -79,22 +78,12 @@
       &-placeholder
         top: 4.8rem
 
-    // select
     &_type_select
       z-index: 5
 
-    // &_type_select > &
-    //   &-placeholder
-    //     transition: .0s
-
     &_type_select > &
       &-item::placeholder
-        // position: relative
         color: $text-ui
-
-    // &_type_select > &
-    //   &-item
-        // padding: 3.2rem 6.4rem 3.2rem var(--padding-x)
 
     &_type_select._filled > &-placeholder
       top: 50%
@@ -109,7 +98,6 @@
       height: 0
       overflow: hidden
       padding: 0
-      // margin: 2rem 0 0
       background: $bg-main
       box-shadow: 0 1.6rem 12rem 0 rgba(154, 154, 154, 0.50)
       border-radius: 1.2rem
@@ -118,8 +106,6 @@
         top: 0
         left: 0
         right: 0
-        // height: 0
-        // overflow: hidden
         z-index: 1
         padding-top: 11.5rem
       &-item
@@ -138,7 +124,6 @@
           border-color: $main-blue
           pointer-events: none
   +lg
-    // --placeholder-top: 1.6rem
     &__legend
       font-size: 1.1rem
       letter-spacing: 0.022rem
@@ -146,9 +131,6 @@
       width: auto
       min-width: 13.3rem
       min-height: 5rem
-      // font-size: 1.4rem
-      // padding: 1.4rem 7.062rem 1.4rem 7.1rem
-      // border-radius: .2rem
     &__input
       --padding-x: 1.4rem
       border-radius: 0.6rem
@@ -156,7 +138,6 @@
       &-item
         font-size: 1.4rem
         line-height: $lh-15-14
-        // padding: 2.6rem  .7rem
         padding: 1.6rem var(--padding-x) 1.7rem
         border-radius: 1rem
         border: .1rem solid $border
@@ -179,26 +160,25 @@
 
       &_type_multiline > &
         &-item
-          // padding: 1.6rem var(--padding-x) 1.7rem
           min-height: 14.6rem
         &-placeholder
           top: 2.3rem
 
       &_type_select > &
         &-item
-          // padding: 1.6rem var(--padding-x) 1.7rem
           overflow: hidden
           text-overflow: ellipsis
+          cursor: pointer
 
       &-options
-        // margin: 1rem 0 0
         box-shadow: 0 .8rem 6rem 0 rgba(154, 154, 154, 0.50)
         border-radius: .6rem
         &-wrapp
-          padding-top: 5.5rem
+          padding-top: 6rem
         &-item
           font-size: 1.4rem
           padding-left: 1rem
+          cursor: pointer
 
           border-left: .7rem solid $bg-main
           &:not(:last-child)
